fixed jumped out buttons

--- a/Application/washings/orders/static/css/admin.css
+++ b/Application/washings/orders/static/css/admin.css
@@ -173,10 +173,6 @@ li:hover .submenu {
     margin-bottom: 8px;
 }
 
-#popup .buttons {
-    margin-top:25px;
-}
-
 #popup .close {
     width: 16px;
     height: 16px;
